# domain-bert

./: .gitattributes  .gitignore  CLAUDE.md  README.md  TRAINING_READY.md  pyproject.toml  requirements.txt  run_training_test.py  training_readiness_report.json
.ctree/: profile.yaml
configs/model/: domain_bert_base_config.json
docs/: DATASET_READINESS_REPORT.md  M1_TRAINING_GUIDE.md  current_training_issues.md  training_guide.md  training_setup_guide.md
scripts/: create_dataset_manifest.py  initialize_tokenizer.py  prepare_training_data_no_shuffle.py  train_domain_bert.py  train_launcher.py
scripts/data/: build_tld_vocabulary.py  create_domain_samples.py  create_synthetic_domains.py  create_validation_split.py  data_utils.py  download_domains_project.py  extract_tlds.py
scripts/tests/: test_dataset_pipeline.py  test_multiworker_loading.py  test_sampling_strategies.py  test_training_readiness.py
scripts/training/: run_pretraining.py  test_training.py
src/domainbert/: __init__.py  config.py  domain_parser.py  model.py  tokenizer.py
src/domainbert/data/: __init__.py  collator.py  simple_dataset.py  streaming_dataset.py  tld_vocab.json
tests/integration/: test_data_pipeline.py  test_pretraining_step.py
tests/unit/: test_collator.py  test_config.py  test_model.py  test_tokenizer.py
