[build-system]
requires = ["setuptools>=65.0.0", "wheel>=0.38.0"]
build-backend = "setuptools.build_meta"

[project]
name = "domainbert"
version = "0.1.0"
description = "A character-level BERT model for domain name understanding."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "tldextract>=5.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tokenizers"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88